# querystar

./: .gitignore  LICENSE  README.md  makefile  pyproject.toml
demos/: app.py  app_kudos.py  bot-msg.py  bot_add_message.py  bot_message.py  gsheet_add_row.py  kudos-Slack_Gsheets.py  slack_action_add_message.py  slack_all_methods.py  slack_dm.py  slack_message.py  slack_sheets.py  slack_trigger_new_message.py  slack_trigger_new_reaction.py  social_reddit.py  test.py  trigger_combine.py
src/querystar/: __init__.py  _client.py  cli.py  client.py  exceptions.py  globals.py  logger.py  remote_logger.py  settings.py
src/querystar/actions/: __init__.py
src/querystar/actions/google_sheets/: __init__.py
src/querystar/actions/slack/: __init__.py  add_direct_message.py  add_message.py  find.py
src/querystar/commands/run/: __init__.py  utils.py
src/querystar/triggers/: __init__.py  combine.py  time.py
src/querystar/triggers/reddit/: __init__.py
src/querystar/triggers/slack/: __init__.py
src/querystar/triggers/social/: __init__.py
